--- a/.github/workflows/autolabels.yaml
+++ b/.github/workflows/autolabels.yaml
@@ -3,7 +3,7 @@ on:
   issues:
     types: [opened, edited]
 jobs:
-  place_order:
+  autolabels:
     runs-on: ubuntu-latest
     steps:
       # - uses: actions/checkout@v2
@@ -17,8 +17,8 @@ jobs:
         with:
           template-path: .github/ISSUE_TEMPLATE/1-report-issue.yml
 
-      - run: echo '${{ steps.issue-parser.outputs.jsonString }}'
       - run: echo '${{ toJSON(steps.issue-parser.outputs.jsonString) }}'
+      - run: echo '${{ fromJSON(steps.issue-parser.outputs.jsonString.services) }}'
       - run: echo '${{ steps.issue-parser.outputs.jsonString }}' > issue.json
 
       - run: cat issue.json
