--- a/.github/workflows/autolabels.yaml
+++ b/.github/workflows/autolabels.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      # - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       # - uses: actions/setup-node@v2
       #   with:
       #     node-version: '16'
