--- a/.github/workflows/autolabels.yaml
+++ b/.github/workflows/autolabels.yaml
@@ -18,8 +18,15 @@ jobs:
         with:
           template-path: .github/ISSUE_TEMPLATE/1-report-issue.yml
 
-      - run: echo '${{ steps.issue-parser.outputs.jsonString.*.services }}' | tr '[:upper:]' '[:lower:]'
       - run: echo '${{ steps.issue-parser.outputs.jsonString }}' | jq '.services' | tr '[:upper:]' '[:lower:]'
+        id: extract-and-format-services
+
+      - uses: andymckay/labeler@master
+        id: labeler
+        with:
+          add-labels: ${{ steps.extract-and-format-services.outputs }}
+          # remove-labels: "in progress"
+
       # - run: echo "'${{ toJSON(steps.issue-parser.outputs.jsonString) }}'" | jq '.[]'
       # # - run: echo '${{ fromJSON(toJSON(steps.issue-parser.outputs.jsonString)) }} | jq '.[].services'
       # # - run: echo '${{ fromJSON(toJSON(steps.issue-parser.outputs.jsonString.services)) }}'
