--- a/.github/workflows/autolabels.yaml
+++ b/.github/workflows/autolabels.yaml
@@ -20,6 +20,7 @@ jobs:
 
       # - run: echo "ISSUE_LABELS=$(echo '${{ steps.issue-parser.outputs.jsonString }}' | jq '.services' | tr '[:upper:]' '[:lower:]') | sed 's/"//g'" >> $GITHUB_ENV
       #   id: extract-and-format-services
+      - run: echo ${{ join(steps.issue-parser.outputs.jsonString.*.services, ', ') }}
 
       - uses: andymckay/labeler@master
         id: labeler
