--- a/.github/workflows/autolabels.yaml
+++ b/.github/workflows/autolabels.yaml
@@ -11,8 +11,8 @@ jobs:
         id: issue-parser
         with:
           template-path: .github/ISSUE_TEMPLATE/1-report-issue.yml
-      # - run: echo "ISSUE_LABELS=$(echo '${{ steps.issue-parser.outputs.jsonString }}' | jq '.services' | tr '[:upper:]' '[:lower:]' | sed 's/"//g' | sed 's/ //g')" >> $GITHUB_ENV
+      - run: echo "ISSUE_LABELS=$('${{ fromJSON(steps.issue-parser.outputs.jsonString).services }}' | tr '[:upper:]' '[:lower:]' | sed 's/"//g' | sed 's/ //g')" >> $GITHUB_ENV
       - uses: andymckay/labeler@master
         with:
-          add-labels: ${{ fromJSON(steps.issue-parser.outputs.jsonString).services }}
+          add-labels: ${{ env.ISSUES_LABELS }}
           remove-labels: "other"
