--- a/.github/workflows/issues-similarity.yml
+++ b/.github/workflows/issues-similarity.yml
@@ -14,6 +14,7 @@ jobs:
         run: echo '${{ toJSON(github.event.issue.state) }}'
       - name: analysis
         uses: actions-cool/issues-similarity-analysis@v1.0.0
+        if: github.event.issue.state == 'open'
         with:
           filter-threshold: 0.7
           title-excludes: 'bug, jenkins'
