--- a/.github/workflows/issues-similarity.yml
+++ b/.github/workflows/issues-similarity.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.issue.state == 'open'
     steps:
+      - name: Dump GitHub github.event.issue
+        id: github_context_step
+        run: echo '${{ toJSON(github.event.issue) }}'
       - name: analysis
         uses: actions-cool/issues-similarity-analysis@v1
         with:
