--- a/.github/workflows/issues-similarity.yml
+++ b/.github/workflows/issues-similarity.yml
@@ -13,7 +13,8 @@ jobs:
         id: github_context_step
         run: echo '${{ toJSON(github.event.issue) }}'
       - name: analysis
-        uses: actions-cool/issues-similarity-analysis@v1
+        if: github.event.issue.state == 'open'
+        uses: actions-cool/issues-similarity-analysis@v1.0.0
         with:
           filter-threshold: 0.7
           title-excludes: 'bug, jenkins'
